--- a/infrastructure/base/nginx/chart.yaml
+++ b/infrastructure/base/nginx/chart.yaml
@@ -1,6 +1,6 @@
 # flux HelmChart to grab nginx ingress controller chart
 
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmChart
 metadata:
   name: nginx
