--- a/infrastructure/base/nginx/release.yaml
+++ b/infrastructure/base/nginx/release.yaml
@@ -1,7 +1,7 @@
 #flux HelmRelase CRD for installing nginx controller helm chart
 
 apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelase
+kind: HelmRelease
 metadata: 
   name: nginx
   namespace: nginx
